Images und Icons geaddet

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -177,8 +177,8 @@
 <div data-role="collapsible" data-collapsed="true">
     <h3>Programm&uuml;bersicht</h3>
     <ul data-filter="true" data-role="listview" class="ui-listview"
-        data-filter-placeholder="Suchen nach Personen/Abstract" id="programmuebersicht">
-        Das Programm steht nur zur Vefügung, wenn Sie über eine aktive Internetverbdindung verfügen. Klicken Sie <b onclick="generiereProgramm()">HIER</b> um das Programm zu aktualisieren.
+        data-filter-placeholder="Suchen nach Personen/Abstract" id="programmuebersicht"><li class="ui-li ui-li-static ui-body-c"><span class="fontnormal" style="line-height: 1.7;">
+        Das Programm steht nur zur Vefügung, wenn Sie über eine aktive Internetverbdindung verfügen.<br/> Klicken Sie <b onclick="generiereProgramm()">HIER</b> um das Programm zu aktualisieren.</span></li>
     </ul>
 </div>
 <div data-role="collapsible" data-collapsed="true" id="waslaeuft">
@@ -190,8 +190,10 @@
 <div data-role="collapsible" data-collapsed="true">
     <h3>Autoren</h3>
     <ul data-filter="true" data-role="listview" class="ui-listview" id="autorenliste"
-        data-filter-placeholder="Suchen nach Namen ...">
-        Das Autorenliste steht nur zur Vefügung, wenn Sie über eine aktive Internetverbdindung verfügen. Klicken Sie <b onclick="generiereAutorenListe()">HIER</b> um das Autorenliste zu aktualisieren.
+        data-filter-placeholder="Suchen nach Namen ..." >
+        <li class="ui-li ui-li-static ui-body-c"><span class="fontnormal" style="line-height: 1.7;">Das Autorenliste steht nur zur Vefügung, wenn Sie über eine aktive Internetverbdindung verfügen.
+            Klicken Sie <b onclick="generiereAutorenListe()">HIER</b> um das Autorenliste zu aktualisieren.</span></li>
+
     </ul>
 </div>
 <div data-role="collapsible" data-collapsed="true">
