--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -29,7 +29,7 @@
         // device APIs are available
         //
         function onDeviceReady() {
-            alert(  'Device Name: '     + device.name     + '<br />' +  'Device Platform: ' + device.platform + '<br />' +
+            alert(  'Device Name: '     + device.model     + '<br />' +  'Device Platform: ' + device.platform + '<br />' +
                     'Device UUID: '     + device.uuid     + '<br />' +
                     'Device Version: '  + device.version  + '<br />');
         }
