--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -19,9 +19,9 @@
             alert("window.localStorage, not defined");
         }
     </script>
-    <!--
+    
     <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
-    <script type="text/javascript" charset="utf-8">
+    <!--<script type="text/javascript" charset="utf-8">
 
         // Wait for device API libraries to load
         //
